# ori_cpp

./: C++.md  CMakeLists.txt  main.cpp  template.cpp
11_new_features/: 1_availability.cpp  2_runtime.cpp  3_right_reference.cpp  4_container.cpp  5_smart_ptr.cpp  6_exception.cpp
12_geeks/: 1_rall.cpp  2_smart_ptr.cpp  3_right_value.cpp
1_compilation/: 1_variable.cpp  2_memory.cpp
2_link/: a.out  main.cpp  sub.cpp
3_base/: 1_new_malloc.cpp  2_quote.cpp  3_const.cpp  4_const_quote.cpp  5_function.cpp  6_inline.cpp  7_function_reload.cpp
3_base/c_cpp_call/: c_call.c  cpp_call_c.cpp
4_oop/: 5_class_func.cpp  6_class_quote.cpp
4_oop/1_class/: CGoods.cpp  CGoods.h
4_oop/2_constructor/: SeqStack.cpp  SeqStack.h
4_oop/3_copy/: CopySeqStack.cpp  Queue.cpp  String.cpp
4_oop/4_constructor_init_list/: ConGoods.cpp
5_template/: 1_func_template.cpp  2_class_template.cpp  3_vector_template.cpp  4_allocator.cpp
6_opt_overload/: 1_opt_overload.cpp  2_string_custom.cpp  3_iterator_vector.cpp  4_invalid_iterator.cpp  5_new_delete.cpp
7_extend/: 10_type_conversion.cpp  1_extend.cpp  2_derive.cpp  3_overload_hide_cover.cpp  4_virtual.cpp  5_polymorphism.cpp  6_abstract.cpp  7_multi_extend.cpp  8_diamond_extend.cpp  9_virtual_destruct.cpp
8_STL/: 1_vector.cpp  2_deque_list.cpp  3_adapter.cpp  4_unordered_container.cpp  5_ordered_container.cpp
9_thread/: 1_thread.cpp  2_thread_gc.cpp  3_this_thread.cpp  4_call_once.cpp  5_native_handle.cpp  6_lock.cpp  7_condition_variable.cpp  8_atomic.cpp
